set background programmatically
git-svn-id: http://andoku.googlecode.com/svn/trunk@53 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout-land/andoku.xml
+++ b/Andoku/res/layout-land/andoku.xml
@@ -35,8 +35,7 @@
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true"
         android:visibility="visible"
-        android:gravity="center_horizontal"
-        android:background="@drawable/sudoku_border"/>
+        android:gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
