included background, title color and timer color in Theme.
git-svn-id: http://andoku.googlecode.com/svn/trunk@68 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout-land/andoku.xml
+++ b/Andoku/res/layout-land/andoku.xml
@@ -20,14 +20,14 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
 <LinearLayout
+    android:id="@+id/background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:paddingLeft="2dp"
     android:paddingRight="2dp"
     android:paddingTop="8dp"
-    android:paddingBottom="9dp"
-    android:background="#feee">
+    android:paddingBottom="9dp">
 
     <com.googlecode.andoku.AndokuPuzzleView
         android:id="@+id/viewPuzzle"
@@ -49,8 +49,7 @@
         <TextView
             android:id="@+id/labelPuzzleTitle"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#f222"/>
+            android:layout_height="wrap_content"/>
 
         <View
             android:layout_width="wrap_content"
@@ -136,7 +135,6 @@
             android:id="@+id/labelTimer"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#f222"
             android:gravity="right"
             android:text="00:00:00"
             android:paddingTop="5dp"
