added a separate view for puzzle source (currently #<num>/<total> but may contain more info some time)
git-svn-id: http://andoku.googlecode.com/svn/trunk@88 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout-land/andoku.xml
+++ b/Andoku/res/layout-land/andoku.xml
@@ -131,14 +131,30 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
-        <TextView
-            android:id="@+id/labelTimer"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:text="00:00:00"
+            android:orientation="horizontal"
             android:paddingTop="5dp"
-            android:paddingBottom="1dp"/>
+            android:paddingBottom="1dp">
+    
+            <TextView
+                android:id="@+id/labelPuzzleSource"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingRight="8dp"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:text="#1/100"/>
+
+            <TextView
+                android:id="@+id/labelTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:00"/>
+    
+        </LinearLayout>
 
     </LinearLayout>
 
