--- a/Andoku/res/layout-land/andoku.xml
+++ b/Andoku/res/layout-land/andoku.xml
@@ -46,10 +46,26 @@
         android:padding="2dp"
         android:background="@drawable/landscape_controls_border">
 
-        <TextView
-            android:id="@+id/labelPuzzleTitle"
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+    
+            <TextView
+                android:id="@+id/labelPuzzleTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingRight="8dp"
+                android:ellipsize="marquee"/>
+    
+            <TextView
+                android:id="@+id/labelPuzzleDifficulty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hard"/>
+    
+        </LinearLayout>
 
         <View
             android:layout_width="wrap_content"
@@ -134,9 +150,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="5dp"
-            android:paddingBottom="1dp">
+            android:orientation="horizontal">
     
             <TextView
                 android:id="@+id/labelPuzzleSource"
@@ -144,7 +158,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingRight="8dp"
-                android:singleLine="true"
                 android:ellipsize="marquee"
                 android:text="#1/100"/>
 
