--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -28,15 +28,28 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/labelPuzzleTitle"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:paddingBottom="1dp"
-        android:layout_alignParentTop="true"
-        android:singleLine="true"
-        android:ellipsize="marquee"/>
+        android:orientation="horizontal"
+        android:paddingBottom="1dp">
+
+        <TextView
+            android:id="@+id/labelPuzzleTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingRight="8dp"
+            android:singleLine="true"
+            android:ellipsize="marquee"/>
+
+        <TextView
+            android:id="@+id/labelPuzzleDifficulty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hard"/>
+
+    </LinearLayout>
 
     <com.googlecode.andoku.AndokuPuzzleView
         android:id="@+id/viewPuzzle"
