--- a/Andoku/res/layout-land/andoku.xml
+++ b/Andoku/res/layout-land/andoku.xml
@@ -52,7 +52,7 @@
             android:orientation="horizontal">
     
             <TextView
-                android:id="@+id/labelPuzzleTitle"
+                android:id="@+id/labelPuzzleName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
