--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -35,7 +35,7 @@
         android:paddingBottom="1dp">
 
         <TextView
-            android:id="@+id/labelPuzzleTitle"
+            android:id="@+id/labelPuzzleName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
