--- a/Andoku/res/values/styles.xml
+++ b/Andoku/res/values/styles.xml
@@ -33,6 +33,10 @@
         <item name="android:minWidth">100dp</item> 
     </style>
 
+    <style name="ErrorTitle" parent="style/NavigationTitle">
+        <item name="android:textColor">#ff00</item> 
+    </style>
+
     <style name="InputToggleButton" parent="android:style/Widget.Button.Toggle">
     </style>
 
