--- a/Andoku/res/values/themes.xml
+++ b/Andoku/res/values/themes.xml
@@ -23,4 +23,9 @@
         <item name="android:windowBackground">@null</item>
     </style>
 
+    <!-- see http://groups.google.com/group/android-developers/browse_thread/thread/d3c076e7a0165e64 -->
+    <style name="Theme.Dialog.NoAnim" parent="android:Theme.Dialog">
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
 </resources>
