added SettingsActivity; better theme support for region colors
git-svn-id: http://andoku.googlecode.com/svn/trunk@166 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout/main.xml
+++ b/Andoku/res/layout/main.xml
@@ -66,6 +66,13 @@
                 android:text="@string/button_nav_resume_game"/>
             <Button
                 style="@style/NavigationButton"
+                android:id="@+id/settingsButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/button_nav_settings"/>
+            <Button
+                style="@style/NavigationButton"
                 android:id="@+id/helpButton"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
