--- a/Andoku/res/layout-land/main.xml
+++ b/Andoku/res/layout-land/main.xml
@@ -41,51 +41,55 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
-        <LinearLayout
+        <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/selectNewGameButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/button_nav_select_new_game"/>
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/selectFoldersButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/button_nav_select_folders"/>
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/resumeGameButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="@string/button_nav_resume_game"/>
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/settingsButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="@string/button_nav_settings"/>
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/helpButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="@string/button_nav_help"/>
-            <Button
-                style="@style/NavigationButton"
-                android:id="@+id/aboutButton"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="@string/button_nav_about"/>
-        </LinearLayout> 
+            android:layout_height="wrap_content">
+            <TableRow>
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/resumeGameButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_nav_resume_game"/>
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/selectNewGameButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:text="@string/button_nav_select_new_game"/>
+            </TableRow>
+            <TableRow android:paddingTop="4dp">
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/selectFoldersButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_nav_select_folders"/>
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/settingsButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:text="@string/button_nav_settings"/>
+            </TableRow>
+            <TableRow android:paddingTop="4dp">
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/helpButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_nav_help"/>
+                <Button
+                    style="@style/NavigationButton"
+                    android:id="@+id/aboutButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:text="@string/button_nav_about"/>
+            </TableRow>
+        </TableLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
