--- a/Andoku/res/values-de/prefs.xml
+++ b/Andoku/res/values-de/prefs.xml
@@ -23,4 +23,6 @@
     <string name="pref_summary_colored_regions">Verwende Farben zur Darstellung der Bereiche eines Sudoku-Rätsels.</string>
     <string name="pref_title_colored_extra_regions">Farbige Bereiche (Extra)</string>
     <string name="pref_summary_colored_extra_regions">Färbe selbst wenn das Sudoku Extrabereiche hat (X oder Hyper).</string>
+    <string name="pref_title_highlight_digits">Ziffern hervorheben</string>
+    <string name="pref_summary_highlight_digits">Hebe die zuletzt eingegebene oder derzeit ausgewählte Ziffer hervor.</string>
  </resources>
