--- a/Andoku/res/drawable/button_toggle.xml
+++ b/Andoku/res/drawable/button_toggle.xml
@@ -17,11 +17,7 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<resources>
-
-    <style name="Theme.NoBackground.Light" parent="android:Theme.Light.NoTitleBar.Fullscreen">
-        <item name="android:windowBackground">@null</item>
-        <item name="buttonStyleKeypad">@style/KeypadButton</item>
-    </style>
-
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="false" android:drawable="@drawable/button_toggle_off" />
+    <item android:state_checked="true" android:drawable="@drawable/button_toggle_on" />
+</selector>
