--- a/Andoku/res/values/attrs.xml
+++ b/Andoku/res/values/attrs.xml
@@ -19,9 +19,16 @@
 
 <resources>
 
-    <style name="Theme.NoBackground.Light" parent="android:Theme.Light.NoTitleBar.Fullscreen">
-        <item name="android:windowBackground">@null</item>
-        <item name="buttonStyleKeypad">@style/KeypadButton</item>
-    </style>
+    <declare-styleable name="Theme">
+        <attr name="buttonStyleKeypad" format="reference"/>
+    </declare-styleable>
+
+    <declare-styleable name="KeypadButton">
+        <attr name="highlighted" format="boolean"/>
+    </declare-styleable>
+
+    <declare-styleable name="DrawableStates">
+        <attr name="state_highlighted" format="boolean"/>
+    </declare-styleable>
 
 </resources>
