Use a ListPreference for colored regions
git-svn-id: http://andoku.googlecode.com/svn/trunk@184 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -36,4 +36,11 @@
         <item>Schwierig</item>
         <item>Teuflisch</item>
     </string-array>
+
+    <string-array name="pref_entries_colored_regions">
+        <item>Niemals</item>
+        <item>Für Standard und Squiggly</item>
+        <item>Für Standard, X, Hyper und Squiggly</item>
+        <item>Immer</item>
+    </string-array>
 </resources>
