--- a/Andoku/res/layout/resume_game.xml
+++ b/Andoku/res/layout/resume_game.xml
@@ -38,7 +38,7 @@
         android:layout_weight="1"/>
     <Button
         style="@style/NavigationButton"
-        android:id="@+id/backButton1"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
