KeypadButton extends Button instead of CompundButton (so we do not inherit the toggle on click behavior)
git-svn-id: http://andoku.googlecode.com/svn/trunk@208 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/drawable/button_toggle.xml
+++ b/Andoku/res/drawable/button_toggle.xml
@@ -17,7 +17,8 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@drawable/button_toggle_off" />
-    <item android:state_checked="true" android:drawable="@drawable/button_toggle_on" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:andoku="http://schemas.android.com/apk/res/com.googlecode.andoku">
+    <item andoku:state_checked="false" android:drawable="@drawable/button_toggle_off" />
+    <item andoku:state_checked="true" android:drawable="@drawable/button_toggle_on" />
 </selector>
