--- a/Andoku/res/values/arrays.xml
+++ b/Andoku/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
   Andoku - a sudoku puzzle game for Android.
   Copyright (C) 2009  Markus Wiederkehr
 
@@ -18,17 +18,20 @@
 -->
 
 <resources>
+    <!-- The possible grid styles (used by "Start New Game") -->
     <string-array name="grid_styles">
         <item>Standard</item>
         <item>Squiggly</item>
     </string-array>
 
+    <!-- The possible extra regions (used by "Start New Game") -->
     <string-array name="extra_regions">
         <item>No extra regions</item>
         <item>X-Sudoku</item>
         <item>Hyper-Sudoku</item>
     </string-array>
 
+    <!-- The possible difficulties (used by "Start New Game") -->
     <string-array name="difficulties">
         <item>Easy</item>
         <item>Medium</item>
@@ -37,17 +40,11 @@
         <item>Fiendish</item>
     </string-array>
 
+    <!-- Values for "Colored Regions" (used by "Settings") -->
     <string-array name="pref_entries_colored_regions">
         <item>Never</item>
         <item>For Standard and Squiggly</item>
         <item>For Standard, X, Hyper and Squiggly</item>
         <item>Always</item>
-    </string-array>
-
-    <string-array name="pref_entryvalues_colored_regions">
-        <item>NEVER</item>
-        <item>STANDARD_SQUIGGLY</item>
-        <item>STANDARD_X_HYPER_SQUIGGLY</item>
-        <item>ALWAYS</item>
     </string-array>
 </resources>
