--- a/Andoku/res/values/enums.xml
+++ b/Andoku/res/values/enums.xml
@@ -17,14 +17,11 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<!-- Contains strings for the "Settings" activity -->
 <resources>
-    <!-- Category for "Display" related settings -->
-    <string name="pref_category_display">Anzeige</string>
-
-    <!-- Titles and summaries for "Display" related settings -->
-    <string name="pref_title_colored_regions">Farbige Bereiche</string>
-    <string name="pref_summary_colored_regions">Verwende Farben zur Darstellung der Bereiche eines Sudoku-Rätsels.</string>
-    <string name="pref_title_highlight_digits">Ziffern hervorheben</string>
-    <string name="pref_summary_highlight_digits">Hebe die zuletzt eingegebene oder derzeit ausgewählte Ziffer hervor.</string>
- </resources>
+    <string-array name="pref_entryvalues_colored_regions">
+        <item>NEVER</item>
+        <item>STANDARD_SQUIGGLY</item>
+        <item>STANDARD_X_HYPER_SQUIGGLY</item>
+        <item>ALWAYS</item>
+    </string-array>
+</resources>
