--- a/Andoku/res/values/prefs.xml
+++ b/Andoku/res/values/prefs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
   Andoku - a sudoku puzzle game for Android.
   Copyright (C) 2009  Markus Wiederkehr
 
@@ -17,8 +17,12 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+<!-- Contains strings for the "Settings" activity -->
 <resources>
+    <!-- Category for "Display" related settings -->
     <string name="pref_category_display">Display</string>
+
+    <!-- Titles and summaries for "Display" related settings -->
     <string name="pref_title_colored_regions">Colored Regions</string>
     <string name="pref_summary_colored_regions">Use colors to display the regions of a sudoku puzzle.</string>
     <string name="pref_title_highlight_digits">Highlight Digits</string>
