--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -23,8 +23,8 @@
     android:id="@+id/background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -63,7 +63,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="1dp">
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp">
 
         <TextView
             android:id="@+id/labelPuzzleSource"
