Changed default value for highlight_digits to false.
git-svn-id: http://andoku.googlecode.com/svn/trunk@241 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/xml/settings.xml
+++ b/Andoku/res/xml/settings.xml
@@ -33,7 +33,7 @@
 
         <CheckBoxPreference
             android:key="highlight_digits"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:title="@string/pref_title_highlight_digits"
             android:summary="@string/pref_summary_highlight_digits"/>
 
