added an option to turn off the timer
git-svn-id: http://andoku.googlecode.com/svn/trunk@244 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/prefs.xml
+++ b/Andoku/res/values-de/prefs.xml
@@ -27,4 +27,6 @@
     <string name="pref_summary_colored_regions">Verwende Farben zur Darstellung der Bereiche eines Sudoku-Rätsels.</string>
     <string name="pref_title_highlight_digits">Ziffern hervorheben</string>
     <string name="pref_summary_highlight_digits">Hebe die zuletzt eingegebene oder derzeit ausgewählte Ziffer hervor.</string>
+    <string name="pref_title_show_timer">Stoppuhr anzeigen</string>
+    <string name="pref_summary_show_timer">Zeigt eine Stoppuhr während des Spiels an.</string>
  </resources>
