--- a/Andoku/res/values/prefs.xml
+++ b/Andoku/res/values/prefs.xml
@@ -27,4 +27,6 @@
     <string name="pref_summary_colored_regions">Use colors to display the regions of a sudoku puzzle.</string>
     <string name="pref_title_highlight_digits">Highlight Digits</string>
     <string name="pref_summary_highlight_digits">Highlights the digit that was last entered or is currently selected.</string>
+    <string name="pref_title_show_timer">Show Timer</string>
+    <string name="pref_summary_show_timer">Displays a stopwatch during the game.</string>
  </resources>
