more options for highlighting digits (never, only single values, all values)
git-svn-id: http://andoku.googlecode.com/svn/trunk@245 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -47,4 +47,11 @@
         <item>Für Standard, X, Hyper und Squiggly</item>
         <item>Immer</item>
     </string-array>
+
+    <!-- Values for "Highlight Digits" (used by "Settings") -->
+    <string-array name="pref_entries_highlight_digits">
+        <item>Niemals</item>
+        <item>Nur einfache Werte</item>
+        <item>Sowohl einfache als auch mehrfache Werte</item>
+    </string-array>
 </resources>
