--- a/Andoku/res/xml/settings.xml
+++ b/Andoku/res/xml/settings.xml
@@ -31,11 +31,14 @@
             android:entryValues="@array/pref_entryvalues_colored_regions"
             android:dialogTitle="@string/pref_title_colored_regions"/>
 
-        <CheckBoxPreference
-            android:key="highlight_digits"
-            android:defaultValue="false"
+        <ListPreference
+            android:key="highlight_digits_2"
+            android:defaultValue="ONLY_SINGLE_VALUES"
             android:title="@string/pref_title_highlight_digits"
-            android:summary="@string/pref_summary_highlight_digits"/>
+            android:summary="@string/pref_summary_highlight_digits"
+            android:entries="@array/pref_entries_highlight_digits"
+            android:entryValues="@array/pref_entryvalues_highlight_digits"
+            android:dialogTitle="@string/pref_title_highlight_digits"/>
 
         <CheckBoxPreference
             android:key="show_timer"
