Added support for "Percent-Sudokus"
git-svn-id: http://andoku.googlecode.com/svn/trunk@253 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -29,6 +29,7 @@
         <item>Keine</item>
         <item>X-Sudoku</item>
         <item>Hyper-Sudoku</item>
+        <item>Prozent-Sudoku</item>
     </string-array>
 
     <!-- The possible difficulties (used by "Start New Game") -->
@@ -43,8 +44,8 @@
     <!-- Values for "Colored Regions" (used by "Settings") -->
     <string-array name="pref_entries_colored_regions">
         <item>Niemals</item>
-        <item>Für Standard und Squiggly</item>
-        <item>Für Standard, X, Hyper und Squiggly</item>
+        <item>Für Standard und Squiggly ohne Extra</item>
+        <item>Für alle außer Squiggly mit Extrabereichen</item>
         <item>Immer</item>
     </string-array>
 
