added support for different input methods
git-svn-id: http://andoku.googlecode.com/svn/trunk@262 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -57,4 +57,10 @@
         <item>Nur einfache Werte</item>
         <item>Sowohl einfache als auch mehrfache Werte</item>
     </string-array>
+
+    <!-- Values for "Input Method" (used by "Settings") -->
+    <string-array name="pref_entries_input_method">
+        <item>Feld dann Werte</item>
+        <item>Werte dann Feld</item>
+    </string-array>
 </resources>
