--- a/Andoku/res/values/arrays.xml
+++ b/Andoku/res/values/arrays.xml
@@ -57,4 +57,10 @@
         <item>Only single values</item>
         <item>Both single and multiple values</item>
     </string-array>
+
+    <!-- Values for "Input Method" (used by "Settings") -->
+    <string-array name="pref_entries_input_method">
+        <item>Cell Then Values</item>
+        <item>Values Then Cell</item>
+    </string-array>
 </resources>
