--- a/Andoku/res/values/prefs.xml
+++ b/Andoku/res/values/prefs.xml
@@ -31,4 +31,11 @@
     <string name="pref_summary_highlight_digits">Highlights the digit that was last entered or is currently selected.</string>
     <string name="pref_title_show_timer">Show Timer</string>
     <string name="pref_summary_show_timer">Displays a stopwatch during the game.</string>
+
+    <!-- Category for "Behavior" related settings -->
+    <string name="pref_category_behavior">Behavior</string>
+
+    <!-- Titles and summaries for "Behavior" related settings -->
+    <string name="pref_title_input_method">Input Method</string>
+    <string name="pref_summary_input_method">Choose how to enter digits in the game.</string>
  </resources>
