--- a/Andoku/res/xml/settings.xml
+++ b/Andoku/res/xml/settings.xml
@@ -50,4 +50,18 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/pref_category_behavior">
+
+        <ListPreference
+            android:key="input_method"
+            android:defaultValue="CELL_THEN_VALUES"
+            android:title="@string/pref_title_input_method"
+            android:summary="@string/pref_summary_input_method"
+            android:entries="@array/pref_entries_input_method"
+            android:entryValues="@array/pref_entryvalues_input_method"
+            android:dialogTitle="@string/pref_title_input_method"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
