--- a/Andoku/res/values/styles.xml
+++ b/Andoku/res/values/styles.xml
@@ -39,7 +39,7 @@
         <item name="android:textColor">#ff00</item> 
     </style>
 
-    <style name="KeypadButton" parent="android:style/Widget.Button.Toggle">
+    <style name="KeypadToggleButton" parent="android:style/Widget.Button.Toggle">
         <item name="android:background">@drawable/button_toggle_bg</item>
         <item name="android:textSize">17dp</item>
     </style>
