extracted class KeypadButton from KeypadToggleButton
git-svn-id: http://andoku.googlecode.com/svn/trunk@265 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/attrs.xml
+++ b/Andoku/res/values/attrs.xml
@@ -22,12 +22,16 @@
 <resources>
 
     <declare-styleable name="Theme">
+        <attr name="buttonStyleKeypad" format="reference"/>
         <attr name="buttonStyleKeypadToggle" format="reference"/>
+    </declare-styleable>
+
+    <declare-styleable name="KeypadButton">
+        <attr name="highlighted" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="KeypadToggleButton">
         <attr name="checked" format="boolean"/>
-        <attr name="highlighted" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="DrawableStates">
