--- a/Andoku/res/values/styles.xml
+++ b/Andoku/res/values/styles.xml
@@ -39,9 +39,16 @@
         <item name="android:textColor">#ff00</item> 
     </style>
 
+    <style name="KeypadButton" parent="android:style/Widget.Button">
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:width">62dp</item> 
+    </style>
+
     <style name="KeypadToggleButton" parent="android:style/Widget.Button.Toggle">
         <item name="android:background">@drawable/button_toggle_bg</item>
         <item name="android:textSize">17dp</item>
+        <item name="android:width">62dp</item> 
     </style>
 
 </resources>
