--- a/Andoku/res/values/themes.xml
+++ b/Andoku/res/values/themes.xml
@@ -23,6 +23,7 @@
 
     <style name="Theme.NoBackground.Light" parent="android:Theme.Light.NoTitleBar.Fullscreen">
         <item name="android:windowBackground">@null</item>
+        <item name="buttonStyleKeypad">@style/KeypadButton</item>
         <item name="buttonStyleKeypadToggle">@style/KeypadToggleButton</item>
     </style>
 
