Added a setting to turn off strict error checking
git-svn-id: http://andoku.googlecode.com/svn/trunk@272 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/prefs.xml
+++ b/Andoku/res/values-de/prefs.xml
@@ -38,4 +38,6 @@
     <!-- Titles and summaries for "Behavior" related settings -->
     <string name="pref_title_input_method">Eingabe-Methode</string>
     <string name="pref_summary_input_method">Legt fest, wie Ziffern während des Spiels eingegeben werden.</string>
+    <string name="pref_title_check_against_solution">Strikte Fehlerprüfung</string>
+    <string name="pref_summary_check_against_solution">Eingaben mit der Lösung des Rätsels vergleichen.</string>
  </resources>
