added hybrid input method
git-svn-id: http://andoku.googlecode.com/svn/trunk@274 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -62,5 +62,6 @@
     <string-array name="pref_entries_input_method">
         <item>Feld dann Werte</item>
         <item>Werte dann Feld</item>
+        <item>Gemischt</item>
     </string-array>
 </resources>
