--- a/Andoku/res/values/arrays.xml
+++ b/Andoku/res/values/arrays.xml
@@ -62,5 +62,6 @@
     <string-array name="pref_entries_input_method">
         <item>Cell Then Values</item>
         <item>Values Then Cell</item>
+        <item>Hybrid</item>
     </string-array>
 </resources>
